<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginsignup"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="@drawable/glass_background"
        android:elevation="8dp">

        <!-- Profile Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            app:cardCornerRadius="60dp"
            app:cardElevation="4dp"
            android:clipChildren="true"
            android:clipToPadding="true">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/android"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_picture" />
        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_john_doe"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#212121"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/johndoe_example_com"
            android:textSize="16sp"
            android:textColor="#616161"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue"
            android:textColor="#ffffff"
            android:text="@string/logout"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />
    </LinearLayout>
</LinearLayout>
